--- a/code/frontend/src/app/pages/my-profile/my-profile.component.html
+++ b/code/frontend/src/app/pages/my-profile/my-profile.component.html
@@ -75,6 +75,7 @@
               formControlName="telefone"
               class="form-control"
               placeholder="(00) 00000-0000"
+              mask="(00) 90000-0000"
             />
           </div>
 
