--- a/code/frontend/src/app/pages/visitor-management/visitor-management.component.html
+++ b/code/frontend/src/app/pages/visitor-management/visitor-management.component.html
@@ -191,6 +191,7 @@
           <select
             id="eDeSP"
             [(ngModel)]="currentVisitor.eDeSP"
+            (ngModelChange)="onEDeSPChange($event)"
             name="eDeSP"
             class="form-control"
           >
