--- a/code/frontend/src/app/pages/visitor-management/visitor-management.component.html
+++ b/code/frontend/src/app/pages/visitor-management/visitor-management.component.html
@@ -190,7 +190,7 @@
           <label for="eDeSP">É de SP?</label>
           <select
             id="eDeSP"
-            [(ngModel)]="currentVisitor.eDeSP"
+            [ngModel]="currentVisitor.eDeSP"
             (ngModelChange)="onEDeSPChange($event)"
             name="eDeSP"
             class="form-control"
