graficos com atualização adequada

--- a/code/frontend/src/app/pages/visitor-management/visitor-management.component.html
+++ b/code/frontend/src/app/pages/visitor-management/visitor-management.component.html
@@ -112,7 +112,7 @@
       />
     </div>
     <div class="action-buttons">
-      <button class="btn-secondary" (click)="loadVisitors()" type="button">Atualizar</button>
+      <button class="btn-secondary" (click)="refreshData()" type="button">Atualizar</button>
       <button class="btn-secondary" (click)="openImportModal()" type="button">
         Importar Planilha
       </button>
