--- a/code/frontend/src/app/pages/registers/registers.html
+++ b/code/frontend/src/app/pages/registers/registers.html
@@ -1,3 +1,3 @@
 <div *ngFor="let register of registers">
-  <p>{{ register.nome }} - {{ register.idade }} - {{ register.nascimento }} - {{ register.email }}</p>
+  <p>{{ register.nome }} - {{ register.idade }} - {{ register.nascimento | date:'dd/MM/yyyy' }} - {{ register.email }}</p>
 </div>
