--- a/code/frontend/src/app/pages/member-management/member-management.html
+++ b/code/frontend/src/app/pages/member-management/member-management.html
@@ -355,6 +355,24 @@
         <h4 class="section-title">Configurações</h4>
         <div class="form-grid">
           <div class="form-group">
+            <label>Tipo de Cadastro</label>
+            <select
+              [(ngModel)]="currentMember.tipoCadastro"
+              name="tipoCadastro"
+              class="form-control"
+            >
+              <option [value]="'Membro'">Membro</option>
+              <option [value]="'Visitante'">Visitante</option>
+              <option [value]="'Seminarista'">Seminarista</option>
+              <option [value]="'Presbítero'">Presbítero</option>
+              <option [value]="'Pastor'">Pastor</option>
+              <option [value]="'Pastor Auxiliar'">Pastor Auxiliar</option>
+              <option [value]="'Ex-Membro'">Ex-Membro</option>
+              <option [value]="'Excomungado'">Excomungado</option>
+            </select>
+          </div>
+          
+          <div class="form-group">
             <label>Comungante</label>
             <select
               [(ngModel)]="currentMember.comungante"
@@ -379,20 +397,14 @@
           </div>
 
           <div class="form-group">
-            <label>Tipo de Cadastro</label>
+            <label>Criança?</label>
             <select
-              [(ngModel)]="currentMember.tipoCadastro"
-              name="tipoCadastro"
+              [(ngModel)]="currentMember.child"
+              name="child"
               class="form-control"
             >
-              <option [value]="'Membro'">Membro</option>
-              <option [value]="'Visitante'">Visitante</option>
-              <option [value]="'Seminarista'">Seminarista</option>
-              <option [value]="'Presbítero'">Presbítero</option>
-              <option [value]="'Pastor'">Pastor</option>
-              <option [value]="'Pastor Auxiliar'">Pastor Auxiliar</option>
-              <option [value]="'Ex-Membro'">Ex-Membro</option>
-              <option [value]="'Excomungado'">Excomungado</option>
+              <option [value]="false">Não</option>
+              <option [value]="true">Sim</option>
             </select>
           </div>
 
@@ -614,6 +626,12 @@
             <label>Intercessor</label>
             <span class="badge" [class.active]="viewingMember.intercessor" [class.inactive]="!viewingMember.intercessor">
               {{ viewingMember.intercessor ? 'Sim' : 'Não' }}
+            </span>
+          </div>
+          <div class="detail-item">
+            <label>Criança?</label>
+            <span class="badge" [class.active]="viewingMember.child" [class.inactive]="!viewingMember.child">
+              {{ viewingMember.child ? 'Sim' : 'Não' }}
             </span>
           </div>
           <div class="detail-item">
