change add-visitors to adicionar-visitantes

--- a/code/frontend/src/app/pages/adicionar-visitantes/adicionar-visitantes.component.scss
+++ b/code/frontend/src/app/pages/adicionar-visitantes/adicionar-visitantes.component.scss
@@ -1,4 +1,4 @@
-@import '../../shared/styles/layout.scss';
+@use '../../shared/styles/layout.scss';
 
 .public-update-container {
   min-height: 100vh;
