reslved duplicated id forms

--- a/code/frontend/src/app/pages/appointments/appointments.html
+++ b/code/frontend/src/app/pages/appointments/appointments.html
@@ -282,7 +282,7 @@
           <h4 class="section-title">Agendamento (CRON)</h4>
           <div class="form-grid">
             <div class="form-group full-width">
-              <cron-selector [(currentAppointment)]="currentAppointment"></cron-selector>
+              <cron-selector [(currentAppointment)]="currentAppointment" [uniqueId]="'appointment-cron'"></cron-selector>
             </div>
           </div>
         </div>
