--- a/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.html
+++ b/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.html
@@ -3,6 +3,11 @@
     <div class="header">
       <h1>Adicionar Visitante</h1>
       <p class="subtitle">Preencha os dados do visitante</p>
+      <div class="header-actions">
+        <button type="button" class="btn-link" (click)="goToLanding()">
+          ← Voltar
+        </button>
+      </div>
     </div>
 
     <div class="form-section">
