--- a/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
+++ b/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
@@ -19,6 +19,7 @@
     .header {
       text-align: center;
       margin-bottom: 30px;
+      position: relative;
 
       h1 {
         color: #333;
@@ -29,6 +30,25 @@
       .subtitle {
         color: #666;
         font-size: 14px;
+      }
+
+      .header-actions {
+        text-align: right;
+        margin-top: 16px;
+      }
+
+      .btn-link {
+        background: none;
+        border: none;
+        color: #667eea;
+        cursor: pointer;
+        font-size: 14px;
+        padding: 0;
+        text-decoration: underline;
+
+        &:hover {
+          color: #764ba2;
+        }
       }
     }
 
