--- a/code/frontend/src/app/pages/logged/member-management/member-management.html
+++ b/code/frontend/src/app/pages/logged/member-management/member-management.html
@@ -475,7 +475,7 @@
     @if (viewingMember) {
       <div class="visualizar-header">
         <img 
-          [src]="getNormalizedPhotoUrl(viewingMember?.fotoUrl)"
+          [src]="getNormalizedPhotoUrl(viewingMember.fotoUrl)"
           alt="Foto do membro"
           class="visualizar-avatar"
           onerror="this.src='img/avatar-default.png'"
